# Design-Patterns-Cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
abstract-factory/: abstract_factory.cpp
